--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <version>2.9.2</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.google.dagger</groupId>
