--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
                             <artifactId>dagger-compiler</artifactId>
                             <version>2.45</version>
                         </path>
+                        <path>
+                            <groupId>org.immutables</groupId>
+                            <artifactId>value</artifactId>
+                            <version>2.9.2</version>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
